# git-earliest-date

./: CHANGE_LOG.md  README.md  pyproject.toml
docs/: repo_info_group.example.json
docs/examples/: simplified_repo_info_group.example.json
docs/schemas/: commit_info.schema.json  person_info.schema.json  repo_info.schema.json  repo_info_group.schema.json  simplified_commit_info.schema.json  simplified_repo_info.schema.json  simplified_repo_info_group.schema.json
git_earliest_date/: entities.py  get_earliest_entity.py  get_repo_dirs.py  get_root_commits.py  logger.py  main.py  options.py
git_earliest_date/entities/: commit.py  fields.py  get_earliest_entity.py  get_simplified_version.py  person.py  repo.py
tools/: validate_schemas.bash
tools/clean/: README.md  clean.jq
tools/validate-by-schema/: README.md  validate_by_schema.bash
tools/validate-schemas/: README.md
