[build-system]
requires = [
  "setuptools >= 65.1.0, < 66.0.0",
  "wheel >= 0.37.1, < 0.38.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "git_earliest_date"
requires-python = ">= 3.10.6, < 4.0.0"
dependencies = [
  'termcolor >= 1.1.0, < 2.0',
  'gitpython >= 3.1.20, < 4.0',
  'dataclasses_json >= 0.5.7, < 0.6.0',
]
dynamic = ["version"]

[project.scripts]
git-earliest-date = "git_earliest_date.main:main"

[tool.setuptools.dynamic]
version = { attr = "git_earliest_date.__version__" }

[tool.black]
line-length = 80
