[build-system]
requires = [
  "setuptools >= 65.1.0, < 66.0.0",
  "wheel >= 0.37.1, < 0.38.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "git_earliest_date"
requires-python = ">= 3.10.6, < 4.0.0"
dependencies = [
  'termcolor >= 1.1.0, < 2.0',
  'gitpython >= 3.1.20, < 4.0',
  'dataclasses_json >= 0.5.7, < 0.6.0',
]
dynamic = ["version"]

[project.scripts]
git-earliest-date = "git_earliest_date.main:main"

[tool.setuptools.dynamic]
version = { attr = "git_earliest_date.__version__" }

[tool.mypy]
disallow_any_unimported = true
# disallow_any_expr = true
disallow_any_decorated = true
disallow_any_generics = true
disallow_subclassing_any = true

disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_untyped_decorators = true

no_implicit_optional = true

warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
warn_incomplete_stub = true

strict_concatenate = true
strict_equality = true

show_column_numbers = true
show_error_codes = true

[tool.black]
line-length = 80
